updated random changes

--- a/web/modules/custom/sharjah_dd/templates/header.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/header.html.twig
@@ -13,11 +13,11 @@
           </button>
 
           <div>
-            <img src="{{ items.left_logo_url }}" class="max-w-full" alt />
+            {# <img src="{{ items.left_logo_url }}" class="max-w-full" alt /> #}
           </div>
 
           <div class="hidden lg:block">
-            <img src="{{ items.right_logo_url }}" class="max-w-full" alt />
+            {# <img src="{{ items.right_logo_url }}" class="max-w-full" alt /> #}
           </div>
 
           <button class="search lg:hidden">
@@ -91,7 +91,7 @@
 						{{ drupal_block('language_block:language_interface', wrapper=false) }}
 						</div>
 						<div class="flex items-center justify-center mt-8">
-							<img src="/{{ active_theme_path()}}//{{ active_theme_path()}}/assets/images/Logo2.svg" class="max-w-full" alt/>
+							{# <img src="/{{ active_theme_path()}}//{{ active_theme_path()}}/assets/images/Logo2.svg" class="max-w-full" alt/> #}
 						</div>
 
 					</div>
