--- a/web/themes/custom/theme_sdd/templates/node/node--view--initiatives--front.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--view--initiatives--front.html.twig
@@ -17,7 +17,7 @@
 			</h5>
 
 			<p class="md:text-lg">
-				{{ content.body|render|striptags|trim|raw }}
+				{{ body_short|render|striptags|trim|raw }}
 			</p>
 		</div>
 
