--- a/web/themes/custom/theme_sdd/templates/views/views-view--our_journey--grid.html.twig
+++ b/web/themes/custom/theme_sdd/templates/views/views-view--our_journey--grid.html.twig
@@ -47,13 +47,13 @@
         <div class="grid gap-6 md:grid-cols-[1fr_2fr]">
           <div class="">
             <h2 class="text-[30px] font-light md:text-5xl">
-              {{ services_header.title|raw }}
+              {{ our_journey.title|raw }}
               </h2>
           </div>
 
           <div class="grid gap-6 md:gap-10">
             <div class="md:text-2xl">
-              {{ services_header.description|raw }}
+              {{ our_journey.description|raw }}
 
             </div>
           </div>
