--- a/web/modules/custom/sharjah_dd/templates/footer.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/footer.html.twig
@@ -1,83 +1,6 @@
-    <div id="overlay"
-      class="fixed inset-0 bg-black/70   opacity-0 pointer-events-none transition-opacity duration-300 z-40"></div>
-
-    <section id="sticky-section"
-      class="sticky z-10 bg-[#F3F4F6]  py-5 hidden md:block    border-b-2 border-[#E5E7EB]">
-      <div class="container mx-auto px-4">
-        <div class="flex justify-between items-center">
-
-          <div class="flex items-center gap-3 has-border">
-            <button
-              class="h-11 px-4 rounded-full bg-white text-sm text-[#6A7282] gap-2.5 flex items-center">
-              <i class="fa-solid fa-rectangle-history"></i>
-              <span>Services</span>
-            </button>
-
-            <button
-              class="h-11 px-4 rounded-full bg-white text-sm text-[#6A7282] gap-2.5 flex items-center">
-              <i class="fa-solid fa-message-exclamation"></i>
-              <span>Feedback & Complaints</span>
-            </button>
-
-            <a
-              class="h-11 px-4 rounded-full bg-white text-sm text-[#6A7282] gap-2.5 flex items-center">
-              <i class="fa-solid fa-phone"></i>
-              <span>Call centre 06-5017717</span>
-            </a>
-          </div>
-
-          <div class="flex items-center gap-3">
-            <button
-              class="bg-white rounded-full w-11 h-11 flex items-center justify-center">
-              <i class="fa-solid fa-share-nodes text-[#6A7282] text-sm"></i>
-            </button>
-
-            <button
-              class="border-3 border-[#ADB5BB] bg-white rounded-full w-11 h-11 flex items-center justify-center">
-
-              <i class="fa-regular fa-face-smile text-3xl "></i>
-            </button>
-          </div>
-
-        </div>
-      </div>
-    </section>
-    
-
-<footer class="bg-[#F3F4F6] pt-16">
-	<div class="container mx-auto px-4">
-
-		<div class="grid-layout  gap-x-[84px]">
-			<div class="item1">
-				<div class=" flex-1 flex items-start mb-10 md:mb-0 md:justify-start justify-center">
-					<img src="/{{ active_theme_path()}}/assets/images/Logo.svg" class="max-w-full" alt>
-				</div>
-			</div>
-			<div class="item3  mt-10 md:mt-0   ">
-				<div class=" flex-1 flex items-end justify-start h-full">
-
-					 <form action class="w-full">
-						<label class="text-xl font-bold mb-7" for>
-							Sign up to our newsletter
-						</label>
-
-						<div class="bg-white justify-between flex items-center mt-7 gap-3 rounded-2xl p-3 ps-6 w-full max-w-[470px]">
-							<input type="search" class="outline-0 rounded-2xl bg-white block w-full" placeholder="Add your email">
-							<button class="bg-[#353535] rounded-[10px] text-white md:p-6 p-2 font-bold">Subscribe</button>
-						</div>
-					</form> 
-
-{# {{ drupal_block('theme_sdd_simplenewssubscription', { unique_id: 'footer_newsletter' }) }} #}
-				
-				</div>
-			</div>
-			<div class="item2">
-
+			<div class="item2 only-footer-menu">
 				<div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-7 sm:gap-y-[30px] md:gap-y-[60px] ">
-
-
 					{% set footer_items = simplify_menu('footer') %}
-
 					{# Group parents into batches of 3 for each row #}
 					{% for row in footer_items.menu_tree|batch(3) %}
 						{# <div class="row"> #}
@@ -111,65 +34,5 @@
 						{% endfor %}
 						{# </div> #}
 					{% endfor %}
-
-
 				</div>
 			</div>
-
-		</div>
-
-	</div>
-
-	<div class="copyrights mt-[30px] relative overflow-hidden md:pb-16 pb-10">
-
-		<div class="absolute bottom-0 end-0 start-0 md:start-auto">
-			<img class="w-full h-[25px] md:h-full" src="/{{ active_theme_path()}}/assets/images/footer.png" alt>
-		</div>
-
-		<div class="container mx-auto px-4 relative z-1">
-
-			<div class="inline-flex md:max-w-max  w-full flex-col md:flex-row justify-center md:justify-start items-center gap-3 pt-[38px] border-t border-[#E6E7EB]">
-				<p class="text-xs text-[#99A1AF]">
-					{{ items.copy_right }}
-					©
-					{{ 'now'|date('Y') }}.</p>
-
-				<div class="flex items-center gap-3 text-xs text-[#4A5565]">
-					<p class>{{"Follow us"|t }}</p>
-
-					<ul class="flex items-center gap-3">
-						<li>
-							<a href="{{ items.facebook }}" target="_blank">
-								<i class="fa-brands fa-facebook-f "></i>
-							</a>
-						</li>
-
-						<li>
-							<a href="{{ items.instagram }}" target="_blank">
-								<i class="fa-brands fa-instagram "></i>
-							</a>
-						</li>
-
-						<li>
-							<a href="{{ items.youtube }}" target="_blank">
-								<i class="fa-brands fa-youtube "></i>
-							</a>
-						</li>
-
-						<li>
-							<a href="{{ items.twitter }}" target="_blank">
-								<img src="/{{ active_theme_path()}}/assets/images/x-twitter.svg" alt>
-							</a>
-						</li>
-
-					</ul>
-				</div>
-			</div>
-
-		</div>
-
-	</div>
-
-</footer>
-
-
