--- a/web/themes/custom/theme_sdd/templates/views/views-view--search.html.twig
+++ b/web/themes/custom/theme_sdd/templates/views/views-view--search.html.twig
@@ -40,27 +40,6 @@
     'py-10',
   ]
 %}
-
-
-<section class="py-12 md:py-[80px]">
-      <div class="container mx-auto px-4">
-        <div class="grid gap-6 md:grid-cols-[1fr_2fr]">
-          <div class="">
-            <h2 class="text-[30px] font-light md:text-5xl">
-              {{ services_header.title|raw }}
-              </h2>
-          </div>
-
-          <div class="grid gap-6 md:gap-10">
-            <div class="md:text-2xl">
-              {{ services_header.description|raw }}
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
 <div{{ attributes.addClass(classes) }}>
       <div class="container mx-auto px-4">
   {{ title_prefix }}
@@ -74,14 +53,19 @@
       {{ exposed }}
     </div>
   {% endif %}
-    {% if header %}
-    <div class="view-header">
-      {{ header }}
-    </div>
-  {% endif %}
   {% if attachment_before %}
     <div class="attachment attachment-before">
       {{ attachment_before }}
+    </div>
+  {% endif %}
+    {% if header %}
+    <div class="view-header">
+      
+      <h3 class="mb-5 text-lg md:text-2xl">
+          <span>{{ header }}</span> {{ "results found for"|t }}
+          <span>“{{ filter_value }}”</span>
+        </h3>
+      
     </div>
   {% endif %}
 
@@ -91,7 +75,7 @@
     </div>
   {% elseif empty %}
     <div class="view-empty">
-      {{ empty }}
+      {% if filter_value %}<h3 class="mb-5 text-lg md:text-2xl">{{ "No results found for"|t }} <span>“{{ filter_value }}”</span></h3>{% endif %}
     </div>
   {% endif %}
 
