--- a/web/themes/custom/theme_sdd/templates/includes/_footer.html.twig
+++ b/web/themes/custom/theme_sdd/templates/includes/_footer.html.twig
@@ -52,7 +52,7 @@
             
 			<div class="item1">
 				<div class=" flex-1 flex items-start mb-10 md:mb-0 md:justify-start justify-center">
-					<img src="/{{ active_theme_path()}}/assets/images/Logo.svg" class="max-w-full" alt>
+					{# <img src="/{{ active_theme_path()}}/assets/images/Logo.svg" class="max-w-full" alt> #}
 				</div>
 			</div>
 			<div class="item3  mt-10 md:mt-0   ">
@@ -80,7 +80,7 @@
 	<div class="copyrights mt-[30px] relative overflow-hidden md:pb-16 pb-10">
 
 		<div class="absolute bottom-0 end-0 start-0 md:start-auto">
-			<img class="w-full h-[25px] md:h-full" src="/{{ active_theme_path()}}/assets/images/footer.png" alt>
+			{# <img class="w-full h-[25px] md:h-full" src="/{{ active_theme_path()}}/assets/images/footer.png" alt> #}
 		</div>
 
 		<div class="container mx-auto px-4 relative z-1">
