--- a/web/themes/custom/theme_sdd/templates/views/views-view--services--main-page.html.twig
+++ b/web/themes/custom/theme_sdd/templates/views/views-view--services--main-page.html.twig
@@ -41,7 +41,26 @@
   ]
 %}
 
-  {% if rows %}
+
+<section class="py-12 md:py-[80px] wrapper-services-header">
+      <div class="container mx-auto px-4">
+        <div class="grid gap-6 md:grid-cols-[1fr_2fr]">
+          <div class="">
+            <h2 class="text-[30px] font-light md:text-5xl">
+              {{ services_header.title|raw }}
+              </h2>
+          </div>
+
+          <div class="grid gap-6 md:gap-10">
+            <div class="md:text-2xl">
+              {{ services_header.description|raw }}
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 <div{{ attributes.addClass(classes) }}>
       <div class="container mx-auto px-4">
   {{ title_prefix }}
@@ -66,7 +85,7 @@
     </div>
   {% endif %}
 
-
+  {% if rows %}
     <div class="view-content row">
       {{ rows }}
     </div>
@@ -74,7 +93,7 @@
     <div class="view-empty">
       {{ empty }}
     </div>
- 
+  {% endif %}
 
   {% if pager %}
     {{ pager }}
@@ -99,4 +118,3 @@
   {% endif %}
 </div>
 </div>
- {% endif %}
