--- a/web/modules/custom/sharjah_dd/templates/front-initiatives.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-initiatives.html.twig
@@ -2,7 +2,7 @@
 	<div class="container mx-auto px-4">
 		<div class="title max-w-[470px]">
 			<h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
-				<img src="/{{ active_theme_path()}}/assets/images/headline.svg" alt/>
+				<img src="{{ active_theme_path()}}/assets/images/headline.svg" alt/>
 				<span>
 					{{ items.highlight }}</span>
 			</h6>
