--- a/web/themes/custom/theme_sdd/css/style.css
+++ b/web/themes/custom/theme_sdd/css/style.css
@@ -74,3 +74,7 @@ body a.visually-hidden.focusable {
    [class^="simplenews-subscriptions-"] [id^="edit-message-"]{
     display: none !important;
    }
+
+   .header-search [id^="edit-submit-head"]{
+    display: none !important;
+   }
