--- a/web/themes/custom/theme_sdd/templates/node/node--view--news--front.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--view--news--front.html.twig
@@ -119,7 +119,7 @@
 
     <a href="{{ url }}" 
        class="{{ view_link }}">
-      <span>{{ 'View all'|t }}</span>
+      <span>{{ 'Learn more'|t }}</span>
 
       <span class="{{ circle_round }}">
         <i class="{{ arrow }}"></i>
