--- a/web/themes/custom/theme_sdd/templates/node/node--view--search.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--view--search.html.twig
@@ -1,5 +1,5 @@
 <h6 class="flex items-center gap-2 text-sm capitalize text-[#6A7282]">
-		<img class="w-[15px]" src="/{{ active_theme_path()}}/assets/images/headline.svg" alt="">
+		<img class="w-[15px]" src="{{ active_theme_path()}}/assets/images/headline.svg" alt="">
 		<span>
 			{{ bundle_label }}
             
