--- a/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
@@ -2,7 +2,8 @@
 	<div class="container mx-auto px-4">
 		<div class="title">
 			<h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
-				<img src="/{{ active_theme_path() }}/aassets/images/headline.svg" alt/>
+				<img src="{{ active_theme_path()}}/assets/images/headline.svg" alt/>
+				
 				<span>
 					{{ items.highlight }}
 				</span>
@@ -14,8 +15,8 @@
 						{{ items.description|render|striptags|trim }}
 					</h2>
 				</div>
-				<a href class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
-					<span class=" ">{{ "View all"|t }}</span>
+				<a href="{{ path('view.news.main_page') }}" class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
+					<span class=" ">{{ "Discover more"|t }}</span>
 
 					<span class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
 						<i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
