--- a/web/modules/custom/sharjah_dd/templates/front-services.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-services.html.twig
@@ -3,7 +3,7 @@
       <div class="container mx-auto px-4">
         <div class="title">
           <h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
-            <img src="/{{active_theme_path()}}/assets/images/headline.svg" alt />
+            <img src="{{active_theme_path()}}/assets/images/headline.svg" alt />
             <span> {{ items.highlight }}</span>
           </h6>
           <h2 class="md:mb-10 md:text-4xl mb-6  text-[30px]">
