--- a/web/themes/custom/theme_sdd/templates/menu/links--language-block.html.twig
+++ b/web/themes/custom/theme_sdd/templates/menu/links--language-block.html.twig
@@ -33,7 +33,7 @@
 #}
 {% if links -%}
 
-<div class="flex h-11 items-center border border-transparent gap-2.5 rounded-full bg-white px-4 transition-all hover:border-orange hover:bg-[#FFF3E9]  text-sm hover:text-orange">
+{# <div class="flex h-11 items-center border border-transparent gap-2.5 rounded-full bg-white px-4 transition-all hover:border-orange hover:bg-[#FFF3E9]  text-sm hover:text-orange">
   {%- if heading -%}
     {%- if heading.level -%}
       <{{ heading.level }}{{ heading.attributes }}>{{ heading.text }}</{{ heading.level }}>
@@ -54,5 +54,28 @@
         {%- endif -%}
   
     {%- endfor -%}
-  </div>
+  </div> #}
+
+ {%- for item in links -%}
+  {%- if item.link -%}
+    {% set link_markup = item.link is iterable ? item.link|render : item.link %}
+    {% set parts = link_markup|split('>', 2) %}
+    {{ (parts|length == 2
+        ? parts[0] ~ '><i class="fa-light fa-globe text-sm transition-all font-semibold"></i>' ~ parts[1]
+        : link_markup
+      ) | raw }}
+  {%- elseif item.url is defined -%}
+    {% set attrs = (item.attributes ?? create_attribute()).addClass('link-with-icon') %}
+    <a href="{{ item.url }}"{{ attrs }}>
+      <i class="fa-light fa-globe text-sm transition-all font-semibold"></i><span>{{ item.text }}</span>
+    </a>
+  {%- elseif item.text_attributes -%}
+    <span{{ item.text_attributes }}>{{ item.text }}</span>
+  {%- else -%}
+    {{ item.text }}
+  {%- endif -%}
+  
+{%- endfor -%}
+
+
 {%- endif %}
