--- a/web/themes/custom/theme_sdd/templates/node/node--page--teaser.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--page--teaser.html.twig
@@ -17,10 +17,10 @@
 							<img src="{{ file_url(node.field_image.entity.uri.value) }}" alt="{{ node.field_image.alt }}" class="my-custom-class"/>
 						{% endif %}
 						<div class="object">
-							<img src="/{{ active_theme_path() }}/images/3.png" alt="About">
-							<img src="/{{ active_theme_path() }}/images/3.png" alt="About">
-							<img src="/{{ active_theme_path() }}/images/3.png" alt="About">
-							<img src="/{{ active_theme_path() }}/images/s1_1.png" alt="About" data-aos="fade-down" data-aos-duration="3000">
+							<img src="{{ active_theme_path() }}/images/3.png" alt="About">
+							<img src="{{ active_theme_path() }}/images/3.png" alt="About">
+							<img src="{{ active_theme_path() }}/images/3.png" alt="About">
+							<img src="{{ active_theme_path() }}/images/s1_1.png" alt="About" data-aos="fade-down" data-aos-duration="3000">
 						</div>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 			<div class="col-lg-6 col-md-12">
 				<div class="experience_content">
 					<div class="section_header">
-						<div class="shadow_icon"><img src="/{{ active_theme_path() }}/images/shadow_icon1.png" alt=""></div>
+						<div class="shadow_icon"><img src="{{ active_theme_path() }}/images/shadow_icon1.png" alt=""></div>
 						<h6 class="section_sub_title">{{ node.field_short_title.value  }}</h6>
 						<h1 class="section_title">{{ short_label }}</h1>
 						<p class="section_desc">
