--- a/web/themes/custom/theme_sdd/templates/term/taxonomy-term--services.html.twig
+++ b/web/themes/custom/theme_sdd/templates/term/taxonomy-term--services.html.twig
@@ -41,6 +41,6 @@
  <div class="swiper-slide"> 
                   <div
                   class="bg-[#F9FAFB] rounded-sm text-center p-5 h-[200px] flex items-center justify-center">
-                  <img src="/{{ active_theme_path()}}/assets/images/image60.png" alt>
+                  <img src="{{ active_theme_path()}}/assets/images/image60.png" alt>
                 </div>
                 </div>
